# ruscore

./: .gitignore  CHANGELOG.md  Cargo.toml  Dockerfile  README.md  docker-compose.yaml  release-please-config.json  scrape_musescore.py
.github/workflows/: ci.yaml  release.yaml
ruscore/: Cargo.toml
ruscore-cli/: Cargo.toml
ruscore-cli/src/: main.rs  pdf.rs
ruscore-core/: Cargo.toml
ruscore-core/src/: chrome.rs  lib.rs  pdf.rs  scraper.rs
ruscore-server/: Cargo.toml
ruscore-server/src/: api.rs  cache.rs  db.rs  embed.rs  main.rs  state.rs  worker.rs
ruscore-server/web/: package-lock.json  package.json
ruscore-server/web/src/app/: globals.css  layout.tsx  page.tsx
ruscore-server/web/src/app/jobs/: page.tsx
ruscore-server/web/src/app/jobs/detail/: page.tsx
ruscore-server/web/src/components/: job-list.tsx  nav.tsx  search-bar.tsx  status-badge.tsx  url-input.tsx
ruscore-server/web/src/lib/: api.ts  types.ts
ruscore/src/: cdp.rs  chrome.rs  main.rs  pdf.rs  scraper.rs
