[package]
name = "ruscore-core"
description = "Core library: Chrome CDP, MuseScore scraping, PDF generation"
version.workspace = true
edition.workspace = true
rust-version.workspace = true
license.workspace = true
authors.workspace = true

[dependencies]
tokio = { version = "1.51.0", features = ["rt-multi-thread", "macros", "process", "time", "signal"] }
tokio-tungstenite = { version = "0.29.0", features = ["native-tls"] }
regex = "1.12.3"
usvg = "0.45.1"
svg2pdf = "0.13.0"
pdf-writer = "0.12.1"
which = "8.0.2"
futures = "0.3.32"
serde = { version = "1", features = ["derive"] }
serde_json = "1.0.149"
reqwest = { version = "0.12", default-features = false, features = ["json", "native-tls"] }
anyhow = "1.0.102"
base64 = "0.22.1"
tracing = "0.1.44"
tempfile = "3.27.0"
